Ready to run on heroku

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://lieroz:b769sz7u@host:5432/test_db
+DATABASE_URL=postgres://lieroz:b769sz7u@localhost/test_db
 BOT_TOKEN=539114483:AAEGOMAwPRSc9YuRK-n4g7MH8W4-LfEAj10
 WEBHOOK_URL=https://1e88a067.ngrok.io
 PORT=8080
